@@ -1287,6 +1287,7 @@ static int brw_interpret(struct ptlrpc_request *request, void *data, int rc)
 {
         struct osc_brw_async_args *aa = data;
         int                        i;
+        int                        nob = rc;
         ENTRY;
 
         rc = osc_brw_fini_request(request, rc);
@@ -1295,6 +1296,8 @@ static int brw_interpret(struct ptlrpc_request *request, void *data, int rc)
                 if (rc == 0)
                         RETURN(0);
         }
+        if ((rc >= 0) && request->rq_set && request->rq_set->set_countp)
+                atomic_add(nob, (atomic_t *)request->rq_set->set_countp);
 
         spin_lock(&aa->aa_cli->cl_loi_list_lock);
         for (i = 0; i < aa->aa_page_count; i++)
